--- a/assets/apps/InfestPromote/style/app.css
+++ b/assets/apps/InfestPromote/style/app.css
@@ -2,14 +2,30 @@ html,body{
     width: 100% !important;
     height: 100% !important;
 }
-a { color: inherit; } 
+a { color: inherit; }
+
+[contenteditable]:focus {
+    outline: none;
+}
 
 .main-content{
     top: 150px !important;
     padding-bottom: 50px;
 }
 
+.list-target {
+    margin-bottom: 20px;
+}
+.card-target{
+    height: 120px !important;
+}
 
+.middle-h{
+    display: contents;
+}
+.middle-div{
+    margin-top: 15px;
+}
 .button-app-container{
     padding: 0 !important;
 }
@@ -20,4 +36,61 @@ a { color: inherit; }
 .list-tag{
 
     margin: 0 0 10px 10px !important;
+}
+
+.input-area {
+    margin-bottom: 11px;
+    border: 1px solid gray;
+    border-radius: 0.4375rem;
+}
+
+.target-add{
+    /* box-sizing: padding-box; */
+    overflow:hidden;
+    /* demo only: */
+}
+.autocomplete-items {
+    position: absolute;
+    margin-top: 10px;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /*position the autocomplete items to be the same width as the container:*/
+    top: 100%;
+    left: 0;
+    right: 0;
+    min-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 0.4375rem;
+    background-color: #f7fafc !important;
+}
+.autocomplete-items div {
+    margin-top: 5px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border: none;
+    border-radius: 0.4375rem;
+
+}
+.autocomplete-items div:hover {
+    /*when hovering an item:*/
+    background-color: #e9e9e9;
+    border-radius: 0.4375rem;
+
+}
+.autocomplete-active {
+    /*when navigating through the items using the arrow keys:*/
+    background-color: DodgerBlue !important;
+    color: #ffffff;
+    border-radius: 0.4375rem;
+}
+
+.list-autocomplate {
+    margin: 10px;
+}
+
+#search-inautocomplate-list {
+    min-width: 100%;
 }
